--- a/css/style.css
+++ b/css/style.css
@@ -58,16 +58,16 @@ h1 a {
 	padding-top: 120px;
 }
 .about p {
-	width: 90%;
+	width: 100%;
 	text-align: justify;
 	padding-top: 25px;
 	color: #727272;
+	font-size: 0.5em;
 }
 
 .opis p{
-	width: 100%;
-	height: 100%;
 	text-align: center;
+    font-size: 0.6em;
 }
 .theme_button {
     background-color: #f44336;
@@ -82,6 +82,7 @@ h1 a {
     text-align: center;
     padding: 25px;
     margin-left: 30%;
+    margin-top: -30%;
 }
 .examples {
 	background-color: #009688;
